--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"mongoose": "^8.7.1"
+		"@codemirror/lang-python": "^6.1.6",
+		"@codemirror/theme-one-dark": "^6.1.2",
+		"mongoose": "^8.7.1",
+		"svelte-codemirror-editor": "^1.4.1"
 	}
 }
