trying to make the docker request work

--- a/sandbox/Dockerfile
+++ b/sandbox/Dockerfile
@@ -1,5 +1,12 @@
 FROM alpine
 
+COPY package.json sandbox.js ./sandbox/
+
 WORKDIR sandbox
 
-RUN apk install npm python3
+RUN apk add npm python3
+RUN npm install
+
+CMD ["node", "sandbox.js"]
+
+EXPOSE 3000
