--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "vite dev --host",
 		"build": "vite build",
 		"preview": "vite preview",
-		"container": "docker build -t codecraft solutions/"
+		"container": "docker build -t codecraft sandbox/"
 	},
 	"devDependencies": {
 		"@skeletonlabs/skeleton": "^2.10.2",
